--- a/zad3.html
+++ b/zad3.html
@@ -3,58 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Columns Layout</title>
-    <style>
-        .mycontainer1 {
-            width: 100%;
-            overflow: auto;
-        }
-        .mycontainer1 div {
-            width: 33%;
-            float: left;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        .mycontainer2 {
-            width: 100%;
-            overflow: auto;
-        }
-        .mycontainer2 div {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        .mycontainer3 {
-            width: 100%;
-            overflow: auto;
-        }
-        .mycontainer3 div {
-            width: 25%;
-            float: left;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        .mycontainer4 {
-            width: 100%;
-            overflow: auto;
-        }
-        .mycontainer4 div {
-            width: 50%;
-            float: left;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        /* Clearfix for floating elements */
-        .clearfix::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-    </style>
+    <title>Zadania3</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
 
